argocd/settings/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argocd
  finalizers:
  - resources-finalizer.argocd.argoproj.io
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - "cd.darkflame.dev"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
